[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/MapEditor/ClientEditor/ClientEditor.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MapEditor/ClientEditor/RegionPanel.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Fonts/pixel_2.ttf" type="FontFile" id=3]
[ext_resource path="res://Scenes/MapEditor/ClientEditor/HouseholdPanel/HouseholdPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Good/iron.tres" type="Resource" id=5]
[ext_resource path="res://Resources/Good/grain.tres" type="Resource" id=6]
[ext_resource path="res://Resources/Good/beasts.tres" type="Resource" id=7]
[ext_resource path="res://Resources/Good/saltpeter.tres" type="Resource" id=8]
[ext_resource path="res://Resources/Good/cotton.tres" type="Resource" id=9]
[ext_resource path="res://Resources/Good/wood.tres" type="Resource" id=10]
[ext_resource path="res://Resources/Good/rubber.tres" type="Resource" id=11]
[ext_resource path="res://Resources/Good/coal.tres" type="Resource" id=12]
[ext_resource path="res://Resources/Good/oil.tres" type="Resource" id=13]
[ext_resource path="res://Scenes/MapEditor/ClientEditor/ResourcePanel/AppendResourceButton.gd" type="Script" id=14]
[ext_resource path="res://Scenes/MapEditor/ClientEditor/ResourcePanel/ResourceButton.gd" type="Script" id=15]
[ext_resource path="res://Scenes/MapEditor/ClientEditor/FactoryPanel/EraseFactoryButton.gd" type="Script" id=17]
[ext_resource path="res://Scenes/MapEditor/ClientEditor/FactoryPanel/AppendFactoryButton.gd" type="Script" id=21]
[ext_resource path="res://Scenes/MapEditor/ClientEditor/AppendHousehold.gd" type="Script" id=36]

[sub_resource type="FontFile" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=3]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="ClientEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RegionPanel" type="Panel" parent="CanvasLayer"]
offset_right = 333.0
offset_bottom = 1080.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/RegionPanel"]
offset_right = 333.0
offset_bottom = 1080.0
theme_override_constants/separation = 0

[node name="Save" type="Button" parent="CanvasLayer/RegionPanel/VBoxContainer"]
offset_right = 333.0
offset_bottom = 38.0
theme_override_fonts/font = SubResource( 2 )
text = "Сохранить"

[node name="NameOfRegion" type="Label" parent="CanvasLayer/RegionPanel/VBoxContainer"]
offset_top = 38.0
offset_right = 333.0
offset_bottom = 70.0
theme_override_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="AppendRailways" type="Button" parent="CanvasLayer/RegionPanel/VBoxContainer"]
offset_top = 70.0
offset_right = 333.0
offset_bottom = 92.0
theme_override_fonts/font = SubResource( 3 )
text = "Железные дороги: 0"

[node name="AppendWorkers" type="Button" parent="CanvasLayer/RegionPanel/VBoxContainer"]
offset_top = 92.0
offset_right = 333.0
offset_bottom = 114.0
theme_override_fonts/font = SubResource( 3 )
button_mask = 3
text = "Добавить Рабочих"
script = ExtResource( 36 )
soc_class = "Worker"
array = "quantity_of_workers"

[node name="AppendFactoryWorkers" type="Button" parent="CanvasLayer/RegionPanel/VBoxContainer"]
offset_top = 114.0
offset_right = 333.0
offset_bottom = 136.0
theme_override_fonts/font = SubResource( 3 )
text = "Добавить Фабр. рабочих"
script = ExtResource( 36 )
soc_class = "Proletarian"
array = "quantity_of_factory_workers"

[node name="AppendClerks" type="Button" parent="CanvasLayer/RegionPanel/VBoxContainer"]
offset_top = 136.0
offset_right = 333.0
offset_bottom = 158.0
theme_override_fonts/font = SubResource( 3 )
text = "Добавить Служащих"
script = ExtResource( 36 )
soc_class = "Clerk"
array = "quantity_of_clerks"

[node name="ListOfHouseholds" type="VBoxContainer" parent="CanvasLayer/RegionPanel/VBoxContainer"]
offset_top = 158.0
offset_right = 333.0
offset_bottom = 619.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ListOfResources" type="HBoxContainer" parent="CanvasLayer/RegionPanel/VBoxContainer"]
offset_top = 619.0
offset_right = 333.0
offset_bottom = 619.0
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ListOfFactories" type="VBoxContainer" parent="CanvasLayer/RegionPanel/VBoxContainer"]
offset_top = 619.0
offset_right = 333.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="AppendResourceButtons" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 333.0
offset_top = 974.0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/separation = 0

[node name="Button" type="Button" parent="CanvasLayer/AppendResourceButtons"]
offset_right = 176.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
script = ExtResource( 14 )
good = ExtResource( 12 )

[node name="Button2" type="Button" parent="CanvasLayer/AppendResourceButtons"]
offset_left = 176.0
offset_right = 352.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
script = ExtResource( 14 )
good = ExtResource( 5 )

[node name="Button3" type="Button" parent="CanvasLayer/AppendResourceButtons"]
offset_left = 352.0
offset_right = 528.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
script = ExtResource( 14 )
good = ExtResource( 6 )

[node name="Button4" type="Button" parent="CanvasLayer/AppendResourceButtons"]
offset_left = 528.0
offset_right = 705.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
script = ExtResource( 14 )
good = ExtResource( 7 )

[node name="Button5" type="Button" parent="CanvasLayer/AppendResourceButtons"]
offset_left = 705.0
offset_right = 881.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
script = ExtResource( 14 )
good = ExtResource( 10 )

[node name="Button6" type="Button" parent="CanvasLayer/AppendResourceButtons"]
offset_left = 881.0
offset_right = 1057.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
script = ExtResource( 14 )
good = ExtResource( 9 )

[node name="Button7" type="Button" parent="CanvasLayer/AppendResourceButtons"]
offset_left = 1057.0
offset_right = 1234.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
script = ExtResource( 14 )
good = ExtResource( 11 )

[node name="Button8" type="Button" parent="CanvasLayer/AppendResourceButtons"]
offset_left = 1234.0
offset_right = 1410.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
script = ExtResource( 14 )
good = ExtResource( 13 )

[node name="Button9" type="Button" parent="CanvasLayer/AppendResourceButtons"]
offset_left = 1410.0
offset_right = 1587.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
script = ExtResource( 14 )
good = ExtResource( 8 )

[node name="AppendFactoryButtons" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 333.0
offset_top = 868.0
offset_right = 1920.0
offset_bottom = 974.0
theme_override_constants/separation = 0

[node name="Button" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_right = 88.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Steel_plant"

[node name="Button2" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 88.0
offset_right = 176.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Glass_factory"

[node name="Button3" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 176.0
offset_right = 264.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Textile_factory"

[node name="Button17" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 264.0
offset_right = 352.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Lumber_plant"

[node name="Button4" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 352.0
offset_right = 440.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Electrical_parts_factory"

[node name="Button18" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 440.0
offset_right = 528.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Mech_parts_factory"

[node name="Button5" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 528.0
offset_right = 617.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Distillery"

[node name="Button6" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 617.0
offset_right = 705.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Furniture_factory"

[node name="Button7" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 705.0
offset_right = 793.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Clothes_factory"

[node name="Button8" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 793.0
offset_right = 881.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Gas_factory"

[node name="Button9" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 881.0
offset_right = 969.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Electrical_appliance_factory"

[node name="Button10" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 969.0
offset_right = 1057.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Phone_factory"

[node name="Button11" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 1057.0
offset_right = 1146.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Radio_factory"

[node name="Button12" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 1146.0
offset_right = 1234.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )
name_of_factory = "Cars_factory"

[node name="Button13" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 1234.0
offset_right = 1322.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )

[node name="Button14" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 1322.0
offset_right = 1410.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )

[node name="Button15" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 1410.0
offset_right = 1498.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )

[node name="Button16" type="Button" parent="CanvasLayer/AppendFactoryButtons"]
offset_left = 1498.0
offset_right = 1587.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true
script = ExtResource( 21 )

[node name="HouseholdPanel" parent="CanvasLayer" instance=ExtResource( 4 )]
offset_top = -23.0
offset_bottom = -1.0

[node name="ResourceButton" type="Button" parent="CanvasLayer"]
offset_top = -133.0
offset_right = 112.0
offset_bottom = -27.0
script = ExtResource( 15 )

[node name="FactoryButton" type="Button" parent="CanvasLayer"]
offset_left = 112.0
offset_top = -133.0
offset_right = 224.0
offset_bottom = -27.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 4 )
text = "gggggg"
script = ExtResource( 17 )

[connection signal="pressed" from="CanvasLayer/RegionPanel/VBoxContainer/Save" to="." method="save_changes"]
[connection signal="pressed" from="CanvasLayer/RegionPanel/VBoxContainer/AppendRailways" to="CanvasLayer/RegionPanel" method="append_railways"]
